# negentropy-perceives

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  dependencies.yml  release.yml  review.yml
docs/: commands.md  configuration.md  development.md  framework.md  issue.md  testing.md  user-guide.md
docs/agents/: apple-silicon-tuning.md  browser-validation.md  knowledge-map.md  pdf-engine-selection.md
docs/zh-CN/: README.md
scripts/benchmark/: parse_pdf_bench.py  parse_pdf_matrix.py
scripts/dev/: setup.sh
scripts/test/: run-tests.sh
src/negentropy/: __init__.py
src/negentropy/perceives/: __init__.py  __main__.py  _logging.py  _pipeline_config.py  config.default.yaml  config.py  models.py  schemas.py  sdk.py
src/negentropy/perceives/apps/: __init__.py  app.py
src/negentropy/perceives/cli/: __init__.py  _output.py  _progress.py  app.py
src/negentropy/perceives/cli/commands/: __init__.py  discover_links.py  inspect_page.py  parse_pdf.py  parse_pdfs.py  parse_webpage.py  parse_webpages.py  prefetch_models.py  server.py
src/negentropy/perceives/core/: __init__.py  cancellation.py  logging.py  pipeline_config.py  pipeline_support.py  services.py  task_context.py  types.py
src/negentropy/perceives/examples/: README.md
src/negentropy/perceives/examples/configs/: __init__.py  extraction_configs.py
src/negentropy/perceives/examples/mcp/: __init__.py  basic_usage.py
src/negentropy/perceives/examples/sdk/: __init__.py  python_sdk_usage.py
src/negentropy/perceives/infra/: __init__.py  _engine_worker_entry.py  engine_worker.py  parsing.py  resilience.py
src/negentropy/perceives/markdown/: __init__.py  _html_builder.py  _math_preservation.py  _media_conversion.py  algorithm_detector.py  converter.py  formatter.py  formula_placeholder_resolver.py  html_preprocessor.py  image_embedder.py  image_ref_normalizer.py
src/negentropy/perceives/ops/: __init__.py  discovery.py  extraction.py  markdown.py  pdf.py
src/negentropy/perceives/pdf/: __init__.py  _engine_dispatch.py  _enhanced_assets.py  _imports.py  _markdown_builder.py  _sources.py  device_config.py  docling_engine.py  enhanced.py  figure_text_filter.py  llm_client.py  llm_orchestrator.py  marker_engine.py  math_formula.py  mineru_engine.py  processor.py
src/negentropy/perceives/pdf/engines/: __init__.py  _base.py  _docling_kwargs.py  _marker_kwargs.py  _mineru_kwargs.py  _opendataloader_schema.py  docling.py  marker.py  mineru.py  opendataloader.py
src/negentropy/perceives/pdf/extraction/: __init__.py  _shared.py  formula.py  image.py  table.py
src/negentropy/perceives/pdf/hardware/: __init__.py  detection.py  device_config.py
src/negentropy/perceives/pdf/llm/: __init__.py  client.py  orchestrator.py
src/negentropy/perceives/pipeline/: __init__.py  base.py  competitive.py  convenience.py  engine_selector.py  llm_judge.py  models.py  orchestrator.py  registry.py  scheduler.py
src/negentropy/perceives/pipeline/models/: __init__.py  _pdf.py  _webpage.py
src/negentropy/perceives/pipeline/pdf_stages/: __init__.py  assembly.py  asset_bundling.py  code_detection.py  formula_extraction.py  image_extraction.py  layout_analysis.py  preprocessing.py  quick_scan.py  table_extraction.py  text_extraction.py
src/negentropy/perceives/pipeline/stages/: __init__.py  _base.py  _helpers.py
src/negentropy/perceives/pipeline/stages/pdf/: assembly.py  asset_bundling.py  code_detection.py  formula_extraction.py  image_extraction.py  layout_analysis.py  preprocessing.py  quick_scan.py  table_extraction.py  (+1 more)
src/negentropy/perceives/pipeline/webpage_stages/: __init__.py  anti_detection.py  asset_bundling.py  compliance_check.py  html_sanitization.py  main_content_extraction.py  markdown_conversion.py  markdown_formatting.py  page_fetching.py  rich_elements.py
src/negentropy/perceives/scraping/: __init__.py  anti_detection.py  browser.py  engine.py  form_handler.py
src/negentropy/perceives/scraping/content_extraction/: __init__.py  pages.py  selectors.py
src/negentropy/perceives/skills/: __init__.py  _base.py  _registry.py
src/negentropy/perceives/skills/definitions/: __init__.py  web_audit.py
src/negentropy/perceives/tools/: __init__.py  _image_resources.py  _middleware.py  _observability.py  _registry.py  _support.py  extraction.py  form.py  markdown.py  pdf.py  stealth.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_cancellation_flow.py  test_comprehensive_integration.py  test_cross_tool_integration.py  test_docling_pdf_integration.py  test_e2e_data_validation.py  test_e2e_document_pipeline.py  test_e2e_error_resilience.py  test_e2e_performance.py  test_image_dimensions_e2e.py  test_langchain_blog_conversion.py  test_llm_pdf_integration.py  test_mcp_tools.py  test_pdf_first_page_regression.py  test_pdf_formula_regression.py  test_pdf_integration.py  test_timeout_and_logging.py  tooling.py
tests/unit/: __init__.py  conftest.py  doc_contracts.py  test_advanced_features.py  test_algorithm_detector.py  test_anti_detection.py  test_app_entrypoint.py  test_asset_bundling_base64.py  test_asset_bundling_disk_export.py  test_browser_utils.py  test_cancellation.py  test_chip_generation.py  test_config.py  test_content_extraction.py  test_convert_cache.py  test_dependency_integrity.py  test_device_config.py  test_docling_engine.py  test_docling_init_kwargs.py  test_docs_commands.py  test_docs_configuration.py  test_docs_user_guide.py  test_engine_init_kwargs.py  test_engine_selector.py  test_engine_worker_daemon.py  test_engine_worker_warmup.py  test_enhanced_pdf_processor.py  test_examples.py  test_figure_text_filter.py  test_form_handler.py  test_formatter_math_protection.py  test_formula_placeholder_resolver.py  test_github_workflows.py  test_html_math_preservation.py  test_image_extraction_concurrency.py  test_image_ref_normalizer.py  test_image_resource_registration.py  test_infra_package.py  test_llm_client.py  test_llm_orchestrator.py  (+26 more)
(+13 files in other folders)
