[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["negentropy*"]
exclude = ["tests*", "reports*", "htmlcov*", "scripts*"]

[tool.setuptools.package-data]
"negentropy.perceives" = ["config.default.yaml"]

[project]
name = "negentropy-perceives"
version = "0.2.0a1"
description = "A commercial-grade MCP Server built on FastMCP, offering robust capabilities to read, extract, and localize (into Markdown) content from web pages and PDFs with both text and images. It is purpose-built for long-term deployment in enterprise environments."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "ThreeFish-AI", email = "threefish.ai@gmail.com" }]
license = "MIT"
keywords = ["mcp", "web-crawler", "pdf", "markdown"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # --- MCP 框架 ---
    "fastmcp>=3.1.0",
    # --- 网页抓取 ---
    "aiohttp>=3.13.0",
    "beautifulsoup4>=4.14.0",
    "fake-useragent>=2.2.0",
    "requests>=2.33.0",
    # --- 浏览器自动化 ---
    "playwright>=1.58.0",
    "selenium>=4.41.0",
    "undetected-chromedriver>=3.5.0",
    # --- PDF 处理 ---
    "markitdown>=0.1.5",
    "pymupdf>=1.27.0",
    "pypdf>=6.10.0",  # 修复 CVE-2026-33699, GHSA-3crg-w4f6-42mx
    # --- PDF 引擎 ---
    "docling>=2.70.0",  # PDF 处理引擎 (GPU 加速)
    # --- 数据模型与配置 ---
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "pyyaml>=6.0",              # YAML 配置文件解析
    # --- 运行时基础设施 ---
    "setuptools>=82.0.0",  # 运行时补丁：undetected-chromedriver 依赖 pkg_resources（distutils），Python 3.12+ 已从标准库移除
]

[project.urls]
"Source Code" = "https://github.com/ThreeFish-AI/negentropy-perceives"
"User Guide" = "https://github.com/ThreeFish-AI/negentropy-perceives/blob/master/docs/user-guide.md"
"Bug Tracker" = "https://github.com/ThreeFish-AI/negentropy-perceives/issues"

[project.optional-dependencies]
llm = [
    "litellm>=1.70.0",
]
# 可选 PDF 引擎（安装后通过 is_available() 自动检测）
mineru = [
    "mineru>=3.0.1",
]
marker = [
    "marker-pdf>=1.10.2",
]
all-engines = [
    "docling>=2.70.0",
    "mineru>=3.0.1",
    "marker-pdf>=1.10.2",
]

[project.scripts]
negentropy-perceives = "negentropy.perceives.apps.app:main"

[tool.pytest.ini_options]
minversion = "9.0"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--disable-warnings",
    "--tb=short",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests", 
    "requires_network: marks tests that require network access",
    "requires_browser: marks tests that require browser setup",
    "requires_gpu: marks tests that require GPU acceleration (MPS/CUDA/XPU)",
    "requires_llm: marks tests that require LLM API access (smart mode, orchestration)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["src/negentropy/perceives"]
omit = [
    "src/negentropy/perceives/__init__.py",
    "tests/*",
    "venv/*",
    ".venv/*",
]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Negentropy Perceives Test Coverage Report"

[tool.coverage.xml]
output = "tests/reports/coverage.xml"

[tool.coverage.json]
output = "tests/reports/coverage.json"

[tool.mypy]
python_version = "3.13"
warn_return_any = false          # 代码尚未全量标注，待类型覆盖率提升后逐步启用
warn_unused_configs = true
disallow_untyped_defs = false    # 同上，待类型覆盖率提升后逐步启用
ignore_missing_imports = true    # 全局兜底：第三方库缺少 py.typed 或 stub

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "undetected_chromedriver.*",
    "fake_useragent.*",
    "playwright.*",
    "bs4.*",
    "selenium.*",
    "fastmcp.*",
]
ignore_missing_imports = true

[tool.uv]
# Pillow 版本统一：surya-ocr(<11) 与 MinerU(>=11) 冲突，上游 PR datalab-to/surya#489 待发布
override-dependencies = ["pillow>=12.0.0"]

[dependency-groups]
dev = [
    # --- 测试框架 ---
    "coverage[toml]>=7.13.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "pytest-json-report>=1.5.0",
    "pytest-mock>=3.15.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.8.0",
    # --- 代码质量 ---
    "mypy>=1.19.0",
    "ruff>=0.15.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.32.4.20260107",
    # --- 安全审计 ---
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    # --- 工程工具 ---
    "pre-commit>=4.5.0",
]
